--- a/package.json
+++ b/package.json
@@ -26,10 +26,14 @@
   },
   "homepage": "https://github.com/marczahn/klops-server#readme",
   "dependencies": {
+    "@types/body-parser": "^1.17.1",
+    "@types/cors": "^2.8.6",
     "@types/lodash": "^4.14.149",
     "@types/uuid": "^3.4.6",
     "@types/ws": "^6.0.4",
+    "body-parser": "^1.19.0",
     "bufferutil": "^4.0.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
     "utf-8-validate": "^5.0.2",
